fix collapse 2

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,8 +61,8 @@ body {
     height: calc(100vh - 91px);
   }
 
-  .collapse {
-    display: block;
+  .navbar-collapse {
+    width: 25%;
   }
 }
 
